# BeamerQt

./: .gitignore  BeamerQt.sh  Development Ideas.lyx  README.md  Release_Notes.md  TODO.txt  TestBeamer.lyx  main.py
Packaging/: README.md  requirements.txt
Packaging/Linux/: build-appimage.sh  build.sh
Packaging/Mac/: build.sh
Packaging/pip/: README.md  build.ps1  build.sh  pyproject.toml
core/: beamerBlock.py  beamerDocument.py  beamerSlide.py  beamerpptx.py  configFile.py  frontMatter.py  preamble.tex  template.py  xmlutils.py
gui/: About.ui  AboutWidget.py  Configurator.ui  Configurator2.ui  ContentItem.ui  ContentItem2.ui  ContentWidget.ui  DocumentTab.ui  DualSlider.py  FrameWidget.ui  ImageScale.py  MainWindow.ui  PreviewPDF.py  PreviewPDF.ui  RecentFiles.py  Slide.py  SlidePrev.ui  SlideWidget.ui  Slidebar.ui  Test.xml  ThemeEditorWindow.py  ThemeEditorWindow.ui  ThemePreview.py  ThemePreview.ui  ThumbListWidget.py  __init__.py  configurator.py  contentitem.py  contentwidget.py  framewidget.py  framexml.py  guidialogs.py  item_registry.py  mainwindow.py  slidebar.py  slidewidget.py
templates/: annarbor.xml  antibes.xml  bergen.xml  berkeley.xml  berlin.xml  boadilla.xml  cambridgeus.xml  copenhagen.xml  darmstadt.xml  default.xml  dresden.xml  frankfurt.xml  genTemplate.py  goettingen.xml  hannover.xml  ilmenau.xml  jsnn.xml  juanlespins.xml  luebeck.xml  madrid.xml  malmoe.xml  marburg.xml  metropolis.xml  montpellier.xml  paloalto.xml  pittsburgh.xml  progressbar.xml  rochester.xml  singapore.xml  szeged.xml  templatelist.txt  univalle.xml  warsaw.xml
(+22 files in other folders)
